--- a/src/polls/templates/polls/detail.html
+++ b/src/polls/templates/polls/detail.html
@@ -8,7 +8,7 @@
         {% for choice in question.choice_set.all %}
             <input 
                 type="radio" 
-                name={{ choice }}
+                name="choice"
                 id="choice{{ forloop.counter }}"
                 value="{{ choice.id }}"
             >
